# CS446_OperatingSystems

./: CMakeLists.txt  README.md  makefile
include/: Simulation.h
includes/: Simulation.h
src/: ConfigFileParser.cpp  ConfigFileParser.h  FileParser.cpp  FileParser.h  Logger.cpp  Logger.h  MetaFileParser.cpp  MetaFileParser.h  Metadata.cpp  Metadata.h  Process.cpp  Process.h  Processor.cpp  Processor.h  ResourceManager.cpp  ResourceManager.h  Simulation.cpp  Simulation.h  Structures.h  main.cpp
